Added unit test for student GET requests
