# routes/index.js
@@ -1,6 +1,7 @@
 const express = require("express")
 const router = new express.Router();
 const students = require('./students');
+const classes = require("./class")
 const swaggerRoute = require('./swagger');
 
 router.use('/', swaggerRoute);
@@ -11,5 +12,6 @@ router.get('/', (req, res) => {
 });
 */
 router.use('/students', students);
+router.use('/classes', classes);
 
 module.exports = router;
